<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="quizMaster"
            type="be.ugent.oomt.quizapp.model.QuizMaster" />
        <variable
            name="handler"
            type="be.ugent.oomt.quizapp.HintActivity" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HintActivity">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <FrameLayout
            android:id="@+id/hint_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_hints"
                android:visibility="@{handler.hintVisibility == handler.NO_HINT ? View.VISIBLE : View.GONE}"
                android:textSize="32sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{handler.hintVisibility == handler.TEXT_HINT ? View.VISIBLE : View.GONE}">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{quizMaster.currentQuestion.textHint}"
                    android:textSize="32sp"
                    tools:text="placeholder" />
            </ScrollView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{handler.hintVisibility == handler.IMAGE_HINT ? View.VISIBLE : View.GONE}"
                tools:srcCompat="@tools:sample/avatars"
                app:imageRemoteUri="@{quizMaster.currentQuestion.imageUriHint}"
                android:contentDescription="@string/hint_image"/>
        </FrameLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/hint_text_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint_group" />

        <Button
            android:id="@+id/hint_text_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> handler.onShowTextHint()}"
            android:text="@string/hint1_btn_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Button
            android:id="@+id/hint_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> handler.onShowImageHint()}"
            android:text="@string/hint_image_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/hint_text_btn" />

    </android.support.constraint.ConstraintLayout>
</layout>